<resources>
    <string name="app_name">Whole Counter</string>
    <string name="settings">Settings</string>
    <string name="hint_limit">Hint: 50, 200...</string>
    <string name="setting_limit">Limit (empty to set no limit)</string>
    <string name="setting_darkmode">Use Dark Mode</string>
    <string name="save">Save</string>
    <string name="limit">⚠</string>
    <string name="about">About this App</string>
    <string name="app_credit">Coded by José Rodrigues © 2020\nWear OS port © 2021\n\nThis App uses the followning libraries:\ncom.github.florent37:viewanimator\ncom.github.thekhaeng:pushdown-anim-click\ncom.github.f0ris.sweetalert:library\n\nSource-code available at: https://github.com/JoseGamerPT/Contador_de_Inteiros</string>
    <string name="restore_session">Do you want to restore the last session?</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world" translatable="false">Hello Square World!</string>
    <string name="vibrate">Use Vibration</string>
</resources>