<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".Settings"
    tools:deviceIds="wear">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/settingsHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/settings"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="12dp"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/limittext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/setting_limit"
                        android:textAlignment="center"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/limitinput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:digits="0123456789"
                        android:ems="7"
                        android:hint="@string/hint_limit"
                        android:inputType="phone"
                        android:minHeight="48dp"
                        android:singleLine="true"
                        android:textAlignment="center"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textColorHint="?android:attr/textColorPrimary" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_weight="0"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/switchtxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center_vertical"
                        android:text="@string/vibrate"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="18sp" />

                    <com.rm.rmswitch.RMSwitch
                        android:id="@+id/switchvib"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_gravity="center_vertical"
                        app:checked="true"
                        app:enabled="true"
                        app:forceAspectRatio="false"
                        app:switchBkgCheckedColor="@android:color/holo_green_dark"
                        app:switchBkgNotCheckedColor="@android:color/holo_red_dark"
                        app:switchDesign="large"
                        app:switchToggleCheckedColor="@android:color/white"
                        app:switchToggleNotCheckedColor="@android:color/white"
                        tools:ignore="TouchTargetSizeCheck" />
                </LinearLayout>

                <TextView
                    android:id="@+id/aboutheader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/about"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/aboutheader2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="sans-serif-medium"
                    android:paddingBottom="50dp"
                    android:text="@string/app_credit"
                    android:textAlignment="center"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="16sp" />
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="0"
            android:background="@drawable/roundbutton"
            android:backgroundTint="?android:attr/textColorPrimary"
            android:fontFamily="sans-serif-black"
            android:text="@string/save"
            android:textColor="?android:attr/textColorPrimaryInverse"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TouchTargetSizeCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.wear.widget.BoxInsetLayout>